--- a/MusicPlayer/Spotify/Pages/PlaylistPage.razor
+++ b/MusicPlayer/Spotify/Pages/PlaylistPage.razor
@@ -17,6 +17,7 @@
     protected override void OnParametersSet()
     {
         InitializePlaylist();
+        StateHasChanged();
     }
 
     private void InitializePlaylist()
