--- a/MusicPlayer/Spotify/Pages/Items/ArtistAlbums.razor
+++ b/MusicPlayer/Spotify/Pages/Items/ArtistAlbums.razor
@@ -35,19 +35,27 @@
 
     private void InitializeAlbums()
     {
-        using (var db = new PlayerContext())
+        if (AlbumId is not null)
         {
-            var album = db.Albums
-                            .Include(a => a.Artist)
-                            .FirstOrDefault(a => a.Id == AlbumId);
-            if (album is not null)
+            using (var db = new PlayerContext())
             {
-                Albums = db.Albums
-                               .Where(a => a.ArtistId == album.ArtistId)
-                               .Where(a => a.Id != album.Id)
-                               .ToList();
-                AuthorName = album.Artist.Name;
+                var album = db.Albums
+                                .Include(a => a.Artist)
+                                .FirstOrDefault(a => a.Id == AlbumId);
+                if (album is not null)
+                {
+                    Albums = db.Albums
+                                   .Where(a => a.ArtistId == album.ArtistId)
+                                   .Where(a => a.Id != album.Id)
+                                   .ToList();
+                    AuthorName = album.Artist.Name;
+                }
             }
+        }
+        else
+        {
+            AuthorName = null;
+            Albums = new List<AlbumModel>();
         }
     }
 }
