TrackRow outline none added

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
@@ -10,6 +10,10 @@
     font-size: 14px;
 }
 
+    .track-entry:focus, .track-entry *:focus {
+        outline: none;
+    }
+
     .track-entry:hover {
         background-color: #1e232a;
     }
