GitHub link and Spotify app link added to topbar

--- a/MusicPlayer/Spotify/Shared/Topbar.razor
+++ b/MusicPlayer/Spotify/Shared/Topbar.razor
@@ -21,10 +21,14 @@
     </div>
 
     <div class="other-controls">
-        <button class="button download-icon">
+        <a href="https://github.com/Oyne/MusicPlayer" target="_blank" class="button profile-icon">
+            <i class="ph-fill ph-github-logo"></i>
+        </a>
+
+        <a href="https://open.spotify.com/download" target="_blank" class="button download-icon">
             <i class="ph ph-arrow-circle-down"></i>
-            Установить приложение
-        </button>
+            Install Spotify App
+        </a>
 
         <button class="button notify-icon">
             <i class="ph ph-bell"></i>
