equalizer gif name changed in TrackRow

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -6,7 +6,7 @@
         <div class="track-number-index @(IsLoaded ? "loaded" : "")">
             @if (IsPlaying)
             {
-                <img height="14" src="/assets/gif/equaliser-animated.gif">
+                <img height="14" src="assets/gif/equa.gif">
             }
             else
             {
